修復全部 TODO：合約測試遷移 JSON 格式 + soft-delete filter + 未使用參數清理
- OrganizationApiContractTest: 改用 loadContract() + verifyQueryContract() 解決合約格式不匹配
- ReportingApiContractTest: 同上 + @SuppressWarnings 處理 Specification 型別警告
- NotificationApiContractTest: 補 SecurityContext/MockBean (SimpMessagingTemplate, JavaMailSender, RestTemplate)
- InsuranceApiContractTest: 移除未使用 CONTRACT 常數
- GetEmployeeListServiceImpl: 補 is_deleted=false soft-delete filter（合約要求）
- GetDepartmentListServiceImpl: 補 is_deleted=false soft-delete filter（合約要求）
- GetDashboardListServiceImpl: 補 is_active=true filter（合約要求）
- LdapLoginService: 移除未使用的 jwtTokenService 欄位

測試結果：Organization 5/5, Notification 4/4, Reporting 3/3 全部通過

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>